--- a/dotnet3.1/Hydra.Bff.Orders/Hydra.Bff.Orders.csproj
+++ b/dotnet3.1/Hydra.Bff.Orders/Hydra.Bff.Orders.csproj
@@ -1,5 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\hydra-core\Hydra.Core\Hydra.Core.csproj" />
+    <ProjectReference Include="..\..\hydra-core\Hydra.Core.MessageBus\Hydra.Core.MessageBus.csproj" />
+    <ProjectReference Include="..\..\hydra-core\Hydra.WebAPI.Core\Hydra.WebAPI.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
