API basic configuration (swagger, DI, etc)

--- a/dotnet3.1/Hydra.Bff.Orders/Hydra.Bff.Orders.csproj
+++ b/dotnet3.1/Hydra.Bff.Orders/Hydra.Bff.Orders.csproj
@@ -6,6 +6,11 @@
     <ProjectReference Include="..\..\hydra-core\Hydra.WebAPI.Core\Hydra.WebAPI.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
