Add OrderController and other configurations

--- a/dotnet3.1/Hydra.Bff.Orders/appsettings.Development.json
+++ b/dotnet3.1/Hydra.Bff.Orders/appsettings.Development.json
@@ -13,10 +13,12 @@
     "ValidAudience": "http://localhost"
   },
   "AllowedHosts": "*",
-  "CatalogUrl": "http://localhost:45070",
-  "BasketUrl": "https://localhost:45060",
-  "OrderUrl": "https://localhost:45070",
-  "PaymentUrl": "https://localhost:45080",
+  "CustomerUrl": "https://localhost:45021",
+  "CatalogUrl": "https://localhost:45031",
+  "VoucherUrl": "https://localhost:45041",
+  "BasketUrl": "https://localhost:45051",
+  "OrderUrl": "https://localhost:45061",
+  "PaymentUrl": "https://localhost:45071",
   "MessageQueueConnection": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   }
