--- a/dotnet3.1/Hydra.Bff.Orders/Hydra.Bff.Orders.csproj
+++ b/dotnet3.1/Hydra.Bff.Orders/Hydra.Bff.Orders.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\hydra-core\Hydra.Core\Hydra.Core.csproj" />
-    <ProjectReference Include="..\..\hydra-core\Hydra.Core.MessageBus\Hydra.Core.MessageBus.csproj" />
-    <ProjectReference Include="..\..\hydra-core\Hydra.WebAPI.Core\Hydra.WebAPI.Core.csproj" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.10" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <ProjectReference Include="..\..\hydra-core\dotnet3.1\Hydra.Core\Hydra.Core.csproj" />
+    <ProjectReference Include="..\..\hydra-core\dotnet3.1\Hydra.Core.MessageBus\Hydra.Core.MessageBus.csproj" />
+    <ProjectReference Include="..\..\hydra-core\dotnet3.1\Hydra.WebAPI.Core\Hydra.WebAPI.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
